--- a/admin/comment.html
+++ b/admin/comment.html
@@ -391,7 +391,7 @@
       </header>
       <!-- MAIN  -->
       <div id="main-container" class="pt-7 d-flex flex-column ms-auto">
-        <div class="admin-main-content p-3 container-fluid bg-white">
+        <!-- <div class="admin-main-content p-3 container-fluid bg-white">
           <div class="bg-light p-3 shadow-sm rounded-2">
             <div class="admin-main-header d-flex justify-content-between">
               <h3 class="admin-main-header-title fs-5 fw-bolder">
@@ -479,7 +479,7 @@
               </ul>
             </nav>
           </div>
-        </div>
+        </div> -->
       </div>
       <!-- FOOTER  -->
       <footer id="admin-footer" class="ms-auto align-items-center bg-secondary">
