--- a/admin.html
+++ b/admin.html
@@ -88,17 +88,11 @@
       rel="stylesheet"
     />
     <!-- <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script> -->
-    <!-- <script
       src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"
       integrity="sha512-9CWGXFSJ+/X0LWzSRCZFsOPhSfm6jbnL+Mpqo0o8Ke2SYr8rCTqb4/wGm+9n13HtDE1NQpAEOrMecDZw4FXQGg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script> -->
+      ></script> -->
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular/angular-route.js"></script>
     <script src="node_modules/angular/angular-cookies.js"></script>
@@ -108,6 +102,12 @@
     <script src="assets/js/wow.js"></script>
     <!-- <script src="assets/js/admin.js"></script> -->
     <script src="assets/js/adminAngu.js"></script>
-    <!-- <script src="assets/js/admin.js"></script> -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="assets/js/admin.js"></script>
   </body>
 </html>
